Fixed Shape & Color tab to be not centered.

--- a/assets/style/dashboard.css
+++ b/assets/style/dashboard.css
@@ -174,8 +174,8 @@ textarea:focus::placeholder {
 }
 
 .colorpallet{
-  margin-left:45px;
-  margin-right: 70px;
+  margin-left:25%;
+  margin-right: 25%;
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 3px;
